# kanshiui

./: Cargo.toml  SPEC.md
.github/workflows/: release.yml
src/: app.rs  kanshi_config.rs  kanshi_restart.rs  main.rs  model.rs  notify.rs  overlay.rs  overlay_app.rs  sway.rs  ui.rs
