[package]
name = "KanshiUI"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A small UI for kanshi"
authors = ["Frieder Reinhold <reinhold@trigon-media.com>"]

[package.metadata.deb]
copyright = "© Frieder Reinhold"

[dependencies]
anyhow = "1"
dirs = "5"
eframe = { version = "0.31", default-features = true }
egui = "0.31"
regex = "1"
swayipc = "3"
tempfile = "3"
